# phyMCP

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
docs/: architecture.md  usage.md
examples/host_mcp_interface/: phymcp-host-interface.py
examples/led_control/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.host.defaults
examples/led_control/main/: CMakeLists.txt  Kconfig.projbuild  device_main.c  host_main.c
include/: phymcp.h  phymcp_device.h  phymcp_frame.h  phymcp_host.h  phymcp_transport.h
src/: phymcp_device.c  phymcp_frame.c  phymcp_host.c  phymcp_transport_espnow.c
